# bfm

./: Cargo.toml  Changes.md  LICENSE
.github/workflows/: ci.yml
assets/themes/: _theme.lua  dark.lua  dark.toml
bfm/: Cargo.toml
bfm/src/: main.rs
graphics/: Cargo.toml
graphics/src/: dir.rs  display_bar.rs  file_card.rs  ftp.rs  home.rs  lib.rs  text_viewer.rs  window.rs
src/: lib.rs  main.rs
src/config/: conf.rs  config.rs
src/files/: dir.rs  file.rs  fs.rs
src/fs/: embed.rs  file.rs  mod.rs  pagination.rs  xdg.rs
src/lua/: theme.rs
src/ui/: button.rs  display_bar.rs  error_page.rs  file_container.rs  file_icon.rs  files.rs  info.rs  link.rs  mod.rs  theme.rs  welcome.rs
src/window/: files.rs
vfs/: Cargo.toml
vfs/src/: embed.rs  ftp.rs  lib.rs  local.rs
