[package]
name = "bfm"
version = "0.1.0"
edition = "2024"
authors = ["Gordon Onayo <gekkowrld@gmail.com"]

[dependencies]
dirs = "6.0.0"
human-repr = "1.1.0"
iced = { version = "0.13.1", features = ["advanced", "svg"] }
rust-embed = { version = "8.6.0", features = ["include-exclude"] }
serde = "1.0.218"
toml = "0.8.20"
url = "2.5.4"
