[package]
name = "bfm"
version = "0.1.0"
edition = "2024"
authors = ["Gordon Onayo <gekkowrld@gmail.com"]

[dependencies]
dirs = "6.0.0"
human-repr = "1.1.0"
iced = { version = "0.13.1", features = ["advanced", "svg"] }
mlua = { version = "0.10.3", features = ["lua54", "vendored"] }
rayon = "1.10.0"
rust-embed = { version = "8.6.0", features = ["include-exclude"] }
serde = "1.0.218"
timediff = "0.2.3"
toml = "0.8.20"
url = "2.5.4"
