[workspace]
resolver = "3"
members = ["bfm", "graphics", "vfs"]

[workspace.dependencies]
vfs = { path = "vfs" }
bfm = { path = "bfm" }
graphics = { path = "graphics" }

[workspace.package]
version = "0.0.1"

[workspace.lints.rust]
missing_debug_implementations = "deny"
missing_docs = "deny"
unsafe_code = "deny"
unused_results = "deny"

[workspace.lints.clippy]
type-complexity = "allow"
map-entry = "allow"
semicolon_if_nothing_returned = "deny"
trivially-copy-pass-by-ref = "deny"
default_trait_access = "deny"
match-wildcard-for-single-variants = "deny"
redundant-closure-for-method-calls = "deny"
filter_map_next = "deny"
manual_let_else = "deny"
unused_async = "deny"
from_over_into = "deny"
needless_borrow = "deny"
new_without_default = "deny"
useless_conversion = "deny"
